# flutter-qdrant-edge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/: .gitkeep
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
ios/: qdrant_edge_flutter.podspec
ios/Classes/: qdrant_edge_flutter_keepalive.c
ios/Frameworks/QdrantEdgeFFI.xcframework/: Info.plist
ios/Frameworks/QdrantEdgeFFI.xcframework/ios-arm64/QdrantEdgeFFI.framework/: Info.plist
ios/Frameworks/qdrant_edge_flutter.xcframework/: Info.plist
lib/: qdrant_edge_flutter.dart
lib/src/: bindings.dart
macos/: qdrant_edge_flutter.podspec
macos/Classes/: qdrant_edge_flutter_keepalive.c
macos/Libraries/: .gitkeep
rust/: Cargo.toml  cbindgen.toml
rust/include/: qdrant_edge_flutter.h
rust/src/: bm25.rs  config.rs  core.rs  dense.rs  embed.rs  error.rs  facet.rs  ffi.rs  ffi_strings.rs  field_index.rs  handle.rs  info.rs  lib.rs  lifecycle.rs  payload.rs  points.rs  retrieve_scroll.rs  search_query.rs  serde_types.rs  snapshot.rs
rust/tests/: smoke.rs
scripts/: build-android.sh  build-ios.sh  build-macos.sh
(+2 files in other folders)
