[package]
name = "qdrant_edge_flutter"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
qdrant-edge = "0.7.2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Dense embeddings — pure-Rust model runtime so it cross-compiles to mobile
# without a per-platform native dependency (unlike ONNX Runtime).
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
# default-features off avoids the oniguruma (C) / esaxx (C++) deps; the BERT
# WordPiece tokenizer does not need them.
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"], optional = true }

[features]
default = ["dense"]
dense = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]

# Optimize dependencies even in dev/test builds so candle inference is not
# unbearably slow while iterating (our own crate stays debuggable).
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
